fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 
 header {
     background-color: #FFD4DC;
-    padding: 20px;
+    padding: 40px;
     margin-left: 30px;
     margin-right: 30px;
 }
@@ -13,8 +13,10 @@ header {
 a {
     text-decoration: none;
     color: #949AA6;
-    font-size: 30px;
-
+    font-size: 40px;
+    padding-left: 60px;
+    padding-right: 60px;
+    
 }
 
 a:hover {
@@ -25,32 +27,32 @@ a:hover {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: flex-start;
-    text-align: center;
+    justify-content: center;
 }
 
 .section-one {
     padding: 40px;
-    padding-left: 30px;
+    padding-top: 50px;
+    padding-left: 100px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: flex-start;
 }
 
-section-two {
+.section-two {
     padding: 40px;
-    padding-right: 30px;
+    padding-right: 100px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: flex-end;
 }
 
 
-section-three{
+.section-three {
     padding: 40px;
-    padding-left: 30px;
+    padding-left: 100px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -59,11 +61,11 @@ section-three{
 
 .section-four {
     padding: 40px;
-    padding-right: 30px;
+    padding-right: 100px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: flex-end;
 
 }
 
